Add Python course website

--- a/research/publications/index.qmd
+++ b/research/publications/index.qmd
@@ -87,7 +87,7 @@ title: Publications
 
 - **Gräbner C.** (2017). The Complexity of Economies and Pluralism in Economics, _Journal of Contextual Economics_, **137**(3): 193--225. doi: [10.3790/jce.137.3.193](https://doi.org/10.3790/jce.137.3.193)
 
-- **Gräbner C.** (2017). Dealing Adequately with the Political Element in Formal Modelling, in: Hanappi H., Katsikides S., Scholz-Wäckerle M. (Eds.): _Theory and Method of Evolutionary Political Economy_. London and New York: Routledge, pp. 236--254.
+- **Gräbner C.** (2017). Dealing Adequately with the Political Element in Formal Modelling, in: Hanappi H., Katsikides S., Scholz-Wäckerle M. (Eds.): _Theory and Method of Evolutionary Political Economy_. London: Routledge, pp. 236--254.
 
 - **Gräbner C.**, Kapeller J. (2017). The Micro-Macro Link in Heterodox Economics, in: Jo T., Chester L., D'Ippolliti C. (Eds.): _The Handbook of Heterodox Economics_. London, UK, New York, NY: Routledge, pp. 145--159.
 
