--- a/research/publications/publications.bib
+++ b/research/publications/publications.bib
@@ -201,15 +201,16 @@
   doi = {10.3790/jce.137.3.193}
 }
 
-@incollection{grabnerDealingAdequatelyPolitical2017,
+@incollection{grabnerDealingAdequatelyPolitical2017a,
   title = {Dealing Adequately with the Political Element in Formal Modelling},
   booktitle = {Theory and {{Method}} of {{Evolutionary Political Economy}}},
   author = {Gr{\"a}bner, Claudius},
-  editor = {Hanappi, Hardy and Katsikides, Savas and {Scholz-W{\"a}ckerle}, Manuel},
+  editor = {Hanappi, Hardy and Katsikides, Savvas and {Scholz-W{\"a}ckerle}, Manuel},
   year = {2017},
   pages = {236--254},
   publisher = {Routledge},
-  address = {London and New York}
+  address = {London},
+  isbn = {978-1-315-47021-4}
 }
 
 @article{grabnerDynamicsNetworksIntroduction2018,
