--- a/research/publications/index.qmd
+++ b/research/publications/index.qmd
@@ -117,11 +117,13 @@ title: Publications
 
 ## 2024
 
-- **Gräbner-Radkowitsch C.**, Strunk B. (2024). Quelle Place Pour Le Sud Global Dans La D\'ecroissance?, in: _The Conversation_, July: [Link](https://theconversation.com/quelle-place-pour-le-sud-global-dans-la-decroissance-225209).
+- **Gräbner-Radkowitsch C.**, Lage J., Wiese F. (2024). On the Economic Significance of Sufficiency, in: _Economists4Future Blog_, April: [Link](https://www.econ4future.org/post/on-the-economic-significance-of-sufficiency).
+
+- **Gräbner-Radkowitsch C.**, Strunk B. (2024). Quelle Place Pour Le Sud Global Dans La D\'ecroissance?, in: _The Conversation_, March: [Link](https://theconversation.com/quelle-place-pour-le-sud-global-dans-la-decroissance-225209).
 
 ## 2023
 
-- **Gräbner-Radkowitsch C.**, Strunk B. (2023). Degrowth and the Global South: Remarks on the Twin Problem of Structural Interdependencies, in: _Developing Economics_, June: [Link](https://developingeconomics.org/2023/11/06/degrowth-and-the-global-south-remarks-on-the-twin-problem-of-structural-interdependencies/).
+- **Gräbner-Radkowitsch C.**, Strunk B. (2023). Degrowth and the Global South: Remarks on the Twin Problem of Structural Interdependencies, in: _Developing Economics_, November: [Link](https://developingeconomics.org/2023/11/06/degrowth-and-the-global-south-remarks-on-the-twin-problem-of-structural-interdependencies/).
 
 - **Gräbner-Radkowitsch C.**, Strunk B. (2023). Degrowth Und Der Globale Süden, in: _Postwachstum Blog_, October: [Link](https://www.postwachstum.de/degrowth-und-der-globale-sueden-20231023).
 
@@ -135,9 +137,9 @@ title: Publications
 
 - Altreiter C., Rogojanu A., **Gräbner C.**, Pühringer S., Wolfmayr G. (2021). Befristete Uni-Stellen: Drei Fehlschlüsse Mit Gravierenden Folgen, in: _Der Standard_, July: [Link](https://www.derstandard.at/story/2000128392310/befristete-uni-stellen-drei-fehlschluesse-mit-gravierenden-folgen).
 
-- **Gräbner-Radkowitsch C.**, Strunk B. (2021). Pluralism in Economics -- Its Critiques and Their Lessons, in: _Developing Economics_, March: [Link](https://developingeconomics.org/2021/02/03/pluralism-in-economics-its-critiques-and-their-lessons/).
+- **Gräbner-Radkowitsch C.**, Strunk B. (2021). Pluralism in Economics -- Its Critiques and Their Lessons, in: _Developing Economics_, February: [Link](https://developingeconomics.org/2021/02/03/pluralism-in-economics-its-critiques-and-their-lessons/).
 
-- **Gräbner-Radkowitsch C.**, Hafele J. (2021). What Are the Reasons for the Lack of Overall Convergence in the EU? A Structuralist View, in: _The Rebuilding Macroeconomics Blog_, August: [Link](https://www.rebuildingmacroeconomics.ac.uk/post/what-are-the-reasons-for-the-lack-of-overall-convergence-in-the-eu-a-structuralist-view).
+- **Gräbner-Radkowitsch C.**, Hafele J. (2021). What Are the Reasons for the Lack of Overall Convergence in the EU? A Structuralist View, in: _The Rebuilding Macroeconomics Blog_, April: [Link](https://www.rebuildingmacroeconomics.ac.uk/post/what-are-the-reasons-for-the-lack-of-overall-convergence-in-the-eu-a-structuralist-view).
 
 - **Gräbner C.**, Heimberger P., Kapeller J., Schütz B. (2021). Ökonomische Offenheit: Die Vermessung Der Globalisierung, in: _Oekonomenstimme_, February: [Link](https://www.oekonomenstimme.org/artikel/2021/02/oekonomische-offenheit-die-vermessung-der-globalisierung/).
 
@@ -145,11 +147,11 @@ title: Publications
 
 - **Gräbner C.**, Strunk B. (2020). Kritik an Der Pluralen Ökonomik -- Was Ist Dran Und Warum Ist Das Wichtig?, in: _Oekonomenstimme_, November: [Link](https://www.oekonomenstimme.org/artikel/2020/11/kritik-an-der-pluralen-oekonomik--was-ist-dran-und-warum-ist-das-wichtig/).
 
-- Heimberger P., **Gräbner C.**, Kapeller J., Schütz B. (2020). Die Vermessung Der Globalisierung, in: _Makronom -- Online Magazin für Wirtschaftspolitik_, January: [Link](https://makronom.de/oekonomische-offenheit-die-vermessung-der-globalisierung-37176).
+- Heimberger P., **Gräbner C.**, Kapeller J., Schütz B. (2020). Die Vermessung Der Globalisierung, in: _Makronom -- Online Magazin für Wirtschaftspolitik_, October: [Link](https://makronom.de/oekonomische-offenheit-die-vermessung-der-globalisierung-37176).
 
 ## 2019
 
-- **Gräbner C.**, Heimberger P., Kapeller J., Schütz B. (2019). Eine Strategie Gegen Die Ökonomische Polarisierung Europas, in: _Makronom -- Online Magazin für Wirtschaftspolitik_, September: [Link](https://makronom.de/eine-strategie-gegen-die-oekonomische-polarisierung-europas-32115).
+- **Gräbner C.**, Heimberger P., Kapeller J., Schütz B. (2019). Eine Strategie Gegen Die Ökonomische Polarisierung Europas, in: _Makronom -- Online Magazin für Wirtschaftspolitik_, July: [Link](https://makronom.de/eine-strategie-gegen-die-oekonomische-polarisierung-europas-32115).
 
 - **Gräbner C.** (2019). Why Europe Is Drifting Apart and What to Do about It, in: _The Rebuilding Macroeconomics Blog_, April: [Link](https://www.rebuildingmacroeconomics.ac.uk/europe-drifting-apart/).
 
