--- a/research/wp/workingpaper.bib
+++ b/research/wp/workingpaper.bib
@@ -25,6 +25,24 @@
   url = {https://www.jku.at/fileadmin/gruppen/108/ICAE\_Working\_Papers/wp130.pdf}
 }
 
+@article{grabner-radkowitschPathDependence2024,
+  title = {Path {{Dependence}}},
+  author = {{Gr{\"a}bner-Radkowitsch}, Claudius and Kapeller, Jakob},
+  year = {2024},
+  journal = {IfSO Working Paper},
+  volume = {36},
+  url = {https://www.uni-due.de/imperia/md/content/soziooekonomie/ifsowp36_graebner-radkowitschkapeller_2024.pdf}
+}
+
+@article{grabner-radkowitschSystemism2024,
+  title = {Systemism},
+  author = {{Gr{\"a}bner-Radkowitsch}, Claudius and Kapeller, Jakob},
+  year = {2024},
+  journal = {ICAE Working Paper},
+  volume = {155},
+  url = {https://www.jku.at/fileadmin/gruppen/108/ICAE_Working_Papers/wp155.pdf}
+}
+
 @article{grabnerCompetitionUniversalismIts2021,
   title = {Competition Universalism: {{Its}} Historical Origins and Timely Alternatives},
   author = {Gr{\"a}bner, Claudius and P{\"u}hringer, Stephan},
