--- a/research/publications/nonacademic.bib
+++ b/research/publications/nonacademic.bib
@@ -20,7 +20,7 @@
   title = {Degrowth and the {{Global South}}: Remarks on the Twin Problem of Structural Interdependencies},
   author = {{Gr{\"a}bner-Radkowitsch}, Claudius and Strunk, Birte},
   year = {2023},
-  month = jun,
+  month = nov,
   journal = {Developing Economics},
   url = {https://developingeconomics.org/2023/11/06/degrowth-and-the-global-south-remarks-on-the-twin-problem-of-structural-interdependencies/}
 }
@@ -34,11 +34,20 @@
   url = {https://www.postwachstum.de/degrowth-und-der-globale-sueden-20231023}
 }
 
+@misc{grabner-radkowitschEconomicSignificanceSufficiency2024,
+  title = {On the {{Economic Significance}} of {{Sufficiency}}},
+  author = {{Gr{\"a}bner-Radkowitsch}, Claudius and Lage, Jonas and Wiese, Frauke},
+  year = {2024},
+  month = apr,
+  journal = {Economists4Future Blog},
+  url = {https://www.econ4future.org/post/on-the-economic-significance-of-sufficiency}
+}
+
 @misc{grabner-radkowitschPluralismEconomicsIts2021,
   title = {Pluralism in Economics -- Its Critiques and Their Lessons},
   author = {{Gr{\"a}bner-Radkowitsch}, Claudius and Strunk, Birte},
   year = {2021},
-  month = mar,
+  month = feb,
   journal = {Developing Economics},
   url = {https://developingeconomics.org/2021/02/03/pluralism-in-economics-its-critiques-and-their-lessons/}
 }
@@ -47,7 +56,7 @@
   title = {Quelle Place Pour Le {{Sud}} Global Dans La D{\'e}croissance?},
   author = {{Gr{\"a}bner-Radkowitsch}, Claudius and Strunk, Birte},
   year = {2024},
-  month = jul,
+  month = mar,
   journal = {The Conversation},
   url = {https://theconversation.com/quelle-place-pour-le-sud-global-dans-la-decroissance-225209}
 }
@@ -56,7 +65,7 @@
   title = {What Are the {{Reasons}} for the {{Lack}} of {{Overall Convergence}} in the {{EU}}? {{A Structuralist View}}},
   author = {{Gr{\"a}bner-Radkowitsch}, Claudius and Hafele, Jakob},
   year = {2021},
-  month = aug,
+  month = apr,
   journal = {The Rebuilding Macroeconomics Blog},
   url = {https://www.rebuildingmacroeconomics.ac.uk/post/what-are-the-reasons-for-the-lack-of-overall-convergence-in-the-eu-a-structuralist-view}
 }
@@ -92,7 +101,7 @@
   title = {Eine {{Strategie}} Gegen Die {\"O}konomische {{Polarisierung Europas}}},
   author = {Gr{\"a}bner, Claudius and Heimberger, Philipp and Kapeller, Jakob and Sch{\"u}tz, Bernhard},
   year = {2019},
-  month = sep,
+  month = jul,
   journal = {Makronom -- Online Magazin f{\"u}r Wirtschaftspolitik},
   url = {https://makronom.de/eine-strategie-gegen-die-oekonomische-polarisierung-europas-32115}
 }
@@ -119,7 +128,7 @@
   title = {Die {{Vermessung}} Der {{Globalisierung}}},
   author = {Heimberger, Philipp and Gr{\"a}bner, Claudius and Kapeller, Jakob and Sch{\"u}tz, Bernhard},
   year = {2020},
-  month = jan,
+  month = oct,
   journal = {Makronom -- Online Magazin f{\"u}r Wirtschaftspolitik},
   url = {https://makronom.de/oekonomische-offenheit-die-vermessung-der-globalisierung-37176}
 }
