--- a/talks/keynotes.bib
+++ b/talks/keynotes.bib
@@ -1,36 +1,3 @@
-@misc{AgentbasedModellingComplexity2023,
-  type = {{Public lecture}},
-  title = {{Agent-based modelling and complexity economics}},
-  shorttitle = {{Agentenbasiertes Modellieren und Komplexit{\"a}ts{\"o}konomik}},
-  year = {2023},
-  month = jan,
-  address = {University of Siegen},
-  url = {pdf/23-01-26_ComplexityABM.pdf},
-  abstract = {23.01.2023},
-  langid = {german}
-}
-
-@misc{AppliedEconomicMethodology2022,
-  type = {Keynote given at the {{Second Philosophy}} \& {{Economics Conference}}},
-  title = {Applied {{Economic Methodology}}},
-  year = {2022},
-  month = sep,
-  address = {University of Vienna},
-  url = {pdf/22-09-29_AppliedMethodology.pdf},
-  abstract = {29.09.202},
-  langid = {english}
-}
-
-@misc{AutomationInequalitiesMerits2022,
-  type = {Guest Lecture given at the {{EAEPE Pre-Conference}} for {{Young Scholars}}},
-  title = {Automation and Inequalities: {{The}} Merits of a Pluralist Research Program in the Context of Automation},
-  year = {2022},
-  month = jun,
-  address = {Parthenope University of Naples},
-  abstract = {06.09.2022},
-  langid = {english}
-}
-
 @misc{ChallengesPluralismEconomics2021,
   type = {{Keynote}},
   title = {{Challenges for pluralism in economics}},
@@ -42,48 +9,72 @@
   langid = {german}
 }
 
-@misc{ComplexityEconomicsAlternative2021,
-  type = {{Invited lecture}},
-  title = {{Complexity Economics: an alternative to the neoclassical equilibrium approach?}},
-  shorttitle = {{Komplexit{\"a}ts{\"o}konomik - Ein Gegenentwurf zur neoklassischen Gleichgewichts{\"o}konomik?}},
-  year = {2021},
-  month = nov,
-  address = {Zeppelin University},
-  abstract = {17.11.2021},
-  langid = {german}
-}
-
-@misc{ComplexityEconomicsShort2021,
-  type = {{Invited lecture}},
-  title = {{Complexity Economics - A short introduction}},
-  shorttitle = {{Komplexit{\"a}ts{\"o}konomik - Eine kurze Einf{\"u}hrung}},
-  year = {2021},
-  month = mar,
-  address = {FU Berlin},
-  abstract = {03.12.2021},
-  langid = {german}
-}
-
-@misc{DegrowthHistoricalOrigins2024,
-  type = {{Public lecture}},
-  title = {{Degrowth: Historical origins, the diversity of the movement and current controversies}},
-  shorttitle = {{Degrowth: Historische Urspr{\"u}nge, die Vielfalt der Bewegung und aktuelle Kontroversen}},
-  year = {2024},
-  month = feb,
-  address = {Heinrich B{\"o}ll Foundation},
-  url = {pdf/24-02-22_Degrowth.pdf},
-  abstract = {22.02.2024},
-  langid = {german}
-}
-
-@misc{DoesTruthLie2022,
-  type = {{Public lecture}},
-  title = {{Does the truth lie somewhere in between? A pluralist perspective on global inequality}},
-  shorttitle = {{Liegt die Wahrheit irgendwo dazwischen? Eine plurale Perspektive auf globale Ungleichheit}},
+@misc{grabner-radkowitschAppliedEconomicMethodology2022,
+  type = {Keynote given at the {{Second Philosophy}} \& {{Economics Conference}}},
+  title = {Applied {{Economic Methodology}}},
+  author = {{Gr{\"a}bner-Radkowitsch}, Claudius},
   year = {2022},
+  month = sep,
+  address = {University of Vienna},
+  url = {pdf/22-09-29_AppliedMethodology.pdf},
+  abstract = {29.09.2022},
+  langid = {english}
+}
+
+@misc{grabner-radkowitschAutomationInequalitiesMerits2022,
+  type = {Guest Lecture given at the {{EAEPE Pre-Conference}} for {{Young Scholars}}},
+  title = {Automation and Inequalities: {{The}} Merits of a Pluralist Research Program in the Context of Automation},
+  author = {{Gr{\"a}bner-Radkowitsch}, Claudius},
+  year = {2022},
+  month = sep,
+  address = {Parthenope University of Naples},
+  abstract = {06.09.2022},
+  langid = {english}
+}
+
+@misc{grabner-radkowitschDevelopingSystemTheory2021,
+  type = {Invited Paper to the International Symposium on {{Theory Development}} through {{Agent-Based Modelling}}},
+  title = {Developing {{System Theory}} via {{Agent-Based Modeling}}},
+  author = {{Gr{\"a}bner-Radkowitsch}, Claudius},
+  year = {2021},
+  month = oct,
+  address = {Hannover},
+  abstract = {06.10.2021},
+  langid = {english}
+}
+
+@misc{grabner-radkowitschEmergenceDebtSecular2023,
+  type = {Seminar Talk},
+  title = {The Emergence of Debt and Secular Stagnation in an Unequal Society},
+  author = {{Gr{\"a}bner-Radkowitsch}, Claudius},
+  year = {2023},
   month = feb,
-  address = {University of T{\"u}bingen},
-  abstract = {02.05.2022},
+  address = {Chemnitz University of Technology},
+  abstract = {07.02.2023},
+  langid = {english}
+}
+
+@misc{grabner-radkowitschPluralismDecolonialityFriends2023,
+  type = {Public Lecture},
+  title = {Pluralism and Decoloniality: Friends or Foes?},
+  author = {{Gr{\"a}bner-Radkowitsch}, Claudius},
+  year = {2023},
+  month = nov,
+  address = {University College London},
+  abstract = {14.11.2023},
+  langid = {english}
+}
+
+@misc{graebner-radkowitschAgentbasedModellingComplexity2023,
+  type = {{Public lecture}},
+  title = {{Agent-based modelling and complexity economics}},
+  shorttitle = {{Agentenbasiertes Modellieren und Komplexit{\"a}ts{\"o}konomik}},
+  author = {{Gr{\"a}bner-Radkowitsch}, Claudius},
+  year = {2023},
+  month = jan,
+  address = {University of Siegen},
+  url = {pdf/23-01-26_ComplexityABM.pdf},
+  abstract = {23.01.2023},
   langid = {german}
 }
 
@@ -100,10 +91,61 @@
   langid = {german}
 }
 
-@misc{PluralismComplexityAlternative2024,
+@misc{graebner-radkowitschComplexityEconomicsAlternative2021,
+  type = {{Invited lecture}},
+  title = {{Complexity Economics: an alternative to the neoclassical equilibrium approach?}},
+  shorttitle = {{Komplexit{\"a}ts{\"o}konomik - Ein Gegenentwurf zur neoklassischen Gleichgewichts{\"o}konomik?}},
+  author = {{Gr{\"a}bner-Radkowitsch}, Claudius},
+  year = {2021},
+  month = nov,
+  address = {Zeppelin University},
+  abstract = {17.11.2021},
+  langid = {german}
+}
+
+@misc{graebner-radkowitschComplexityEconomicsShort2021,
+  type = {{Invited lecture}},
+  title = {{Complexity Economics - A short introduction}},
+  shorttitle = {{Komplexit{\"a}ts{\"o}konomik - Eine kurze Einf{\"u}hrung}},
+  author = {{Gr{\"a}bner-Radkowitsch}, Claudius},
+  year = {2021},
+  month = dec,
+  address = {FU Berlin},
+  abstract = {03.12.2021},
+  langid = {german}
+}
+
+@misc{graebner-radkowitschDegrowthHistoricalOrigins2024,
+  type = {{Public lecture}},
+  title = {{Degrowth: Historical origins, the diversity of the movement and current controversies}},
+  shorttitle = {{Degrowth: Historische Urspr{\"u}nge, die Vielfalt der Bewegung und aktuelle Kontroversen}},
+  author = {{Gr{\"a}bner-Radkowitsch}, Claudius},
+  year = {2024},
+  month = feb,
+  address = {Heinrich B{\"o}ll Foundation},
+  url = {pdf/24-02-22_Degrowth.pdf},
+  abstract = {22.02.2024},
+  langid = {german}
+}
+
+@misc{graebner-radkowitschDoesTruthLie2022,
+  type = {{Public lecture}},
+  title = {{Does the truth lie somewhere in between? A pluralist perspective on global inequality}},
+  shorttitle = {{Liegt die Wahrheit irgendwo dazwischen? Eine plurale Perspektive auf globale Ungleichheit}},
+  author = {{Gr{\"a}bner-Radkowitsch}, Claudius},
+  year = {2022},
+  month = may,
+  address = {University of T{\"u}bingen},
+  url = {pdf/22-05-02_PluralePerspektiveUngleichheit.pdf},
+  abstract = {02.05.2022},
+  langid = {german}
+}
+
+@misc{graebner-radkowitschPluralismComplexityAlternative2024,
   type = {{Public lecture}},
   title = {{Pluralism and Complexity: an alternative to the neoclassical equilibrium approach?}},
   shorttitle = {{Pluralismus und Komplexit{\"a}t: Ein Gegenentwurf zur neoklassischen Gleichgewichts{\"o}konomik?}},
+  author = {{Gr{\"a}bner-Radkowitsch}, Claudius},
   year = {2024},
   month = jan,
   address = {University of Hamburg},
@@ -112,11 +154,24 @@
   langid = {german}
 }
 
+@misc{graebner-radkowitschWhatPluralistEconomics2021,
+  type = {{Inaugural speech to the public lecture series on pluralism in economics}},
+  title = {{What is pluralist economics?}},
+  shorttitle = {{Was ist Plurale {\"O}konomik?}},
+  author = {{Gr{\"a}bner-Radkowitsch}, Claudius},
+  year = {2021},
+  month = oct,
+  address = {Christian-Albrechts-University},
+  abstract = {19.10.2021},
+  langid = {german},
+  annotation = {Available on Youtube}
+}
+
 @misc{PluralismComplexityEffective2019,
   type = {Keynote},
   title = {Pluralism, Complexity and the Effective Triangulation of Methods},
   year = {2019},
-  month = feb,
+  month = sep,
   address = {NEEC Summer Schoool on Complexity Economics, Behavioral Economics and Data Science at the University of Bochum},
   abstract = {02.09.2019},
   langid = {english}
@@ -136,7 +191,7 @@
   type = {Short Course at the {{EAEPE Pre-Conference}} for {{Young Scholars}}},
   title = {The {{Political Economy}} of {{Economic Complexity}}: {{Models}}, {{Data}} and {{Policy}}},
   year = {2019},
-  month = dec,
+  month = sep,
   address = {Warsaw University of Economics},
   url = {2019EAEPE-Complexity.qmd},
   abstract = {11.-12.09.2019},
@@ -155,24 +210,12 @@
   langid = {german}
 }
 
-@misc{WhatPluralistEconomics2021,
-  type = {{Inaugural speech to the public lecture series on pluralism in economics}},
-  title = {{What is pluralist economics?}},
-  shorttitle = {{Was ist Plurale {\"O}konomik?}},
-  year = {2021},
-  month = oct,
-  address = {Christian-Albrechts-University},
-  abstract = {19.10.2021},
-  langid = {german},
-  annotation = {Available on Youtube}
-}
-
 @misc{WhyWeNeed2021,
   type = {{Keynote}},
   title = {{Why we need pluralist economics}},
   shorttitle = {{Warum braucht es Plurale {\"O}konomik?}},
   year = {2021},
-  month = sep,
+  month = jun,
   address = {University of Vienna},
   abstract = {09.06.2021 (together with Birte Strunk)},
   langid = {german}
