--- a/talks/keynotes.bib
+++ b/talks/keynotes.bib
@@ -103,7 +103,7 @@
   langid = {german}
 }
 
-@misc{graebner-radkowitschComplexityEconomicsShort2021,
+@misc{graebner-radkowitschComplexityEconomicsShort2021a,
   type = {{Invited lecture}},
   title = {{Complexity Economics - A short introduction}},
   shorttitle = {{Komplexit{\"a}ts{\"o}konomik - Eine kurze Einf{\"u}hrung}},
@@ -151,6 +151,19 @@
   address = {University of Hamburg},
   url = {pdf/24-01-24_ComplexityABM.pdf},
   abstract = {19.01.2024},
+  langid = {german}
+}
+
+@misc{graebner-radkowitschPluralityPluralismEconomics2021,
+  type = {{Keynote at the symposium "The Future of Pluralist Economics"}},
+  title = {{The Plurality of Pluralism in Economics}},
+  shorttitle = {{Die Pluralit{\"a}t der Pluralen {\"O}konomik - {\"U}berlegungen zur Zukunft des Pluralismus in der VWL}},
+  author = {{Gr{\"a}bner-Radkowitsch}, Claudius},
+  year = {2021},
+  month = dec,
+  address = {University of Hamburg},
+  url = {pdf/24-11-22_PluralityPluralism.pdf},
+  abstract = {22.11.2024},
   langid = {german}
 }
 
