--- a/talks/keynotes.bib
+++ b/talks/keynotes.bib
@@ -65,6 +65,32 @@
   langid = {english}
 }
 
+@misc{graebner-radkowitsch02,
+  type = {{Public lecture}},
+  title = {{Agent-based modelling and complexity economics}},
+  shorttitle = {{Agentenbasiertes Modellieren und Komplexit{\"a}ts{\"o}konomik}},
+  author = {{Gr{\"a}bner-Radkowitsch}, Claudius},
+  year = {2024},
+  month = jan,
+  address = {University of Siegen},
+  url = {pdf/24-01-19_ComplexityPluralism.pdf},
+  abstract = {24.01.2024},
+  langid = {german}
+}
+
+@misc{graebner-radkowitsch02a,
+  type = {{Public lecture}},
+  title = {{The Plurality of Pluralist Economics}},
+  shorttitle = {{Die Pluralit{\"a}t der Pluralen {\"O}konomik}},
+  author = {{Gr{\"a}bner-Radkowitsch}, Claudius},
+  year = {2024},
+  month = nov,
+  address = {University of Hamburg},
+  url = {pdf/24-11-22_PluralityPluralism.pdf},
+  abstract = {22.11.2024},
+  langid = {german}
+}
+
 @misc{graebner-radkowitschAgentbasedModellingComplexity2023,
   type = {{Public lecture}},
   title = {{Agent-based modelling and complexity economics}},
@@ -75,19 +101,6 @@
   address = {University of Siegen},
   url = {pdf/23-01-26_ComplexityABM.pdf},
   abstract = {23.01.2023},
-  langid = {german}
-}
-
-@misc{graebner-radkowitschAgentbasedModellingComplexity2024,
-  type = {{Public lecture}},
-  title = {{Agent-based modelling and complexity economics}},
-  shorttitle = {{Agentenbasiertes Modellieren und Komplexit{\"a}ts{\"o}konomik}},
-  author = {{Gr{\"a}bner-Radkowitsch}, Claudius},
-  year = {2024},
-  month = jan,
-  address = {University of Siegen},
-  url = {pdf/24-01-19_ComplexityPluralism.pdf},
-  abstract = {24.01.2024},
   langid = {german}
 }
 
